15 March 2018: Wouter
	- Add --with-libhiredis, unbound support for a new cached backend
	  that uses a Redis server as the storage.  This implementation
	  depends on the hiredis client library (https://redislabs.com/lp/hiredis/).
	  And unbound should be built with both --enable-cachedb and
	  --with-libhiredis[=PATH] (where $PATH/include/hiredis/hiredis.h
	  should exist).  Patch from Jinmei Tatuya (Infoblox).
	- Fix #3817: core dump happens in libunbound delete, when queued
	  servfail hits deleted message queue.
	- Create additional tls service interfaces by opening them on other
	  portnumbers and listing the portnumbers as additional-tls-port: nr.

13 March 2018: Wouter
	- Fix typo in documentation.
	- Fix #3736: Fix 0 TTL domains stuck on SERVFAIL unless manually
	  flushed with serve-expired on.

12 March 2018: Wouter
	- Added documentation for aggressive-nsec: yes.
	- tag 1.7.0rc3.  That became the 1.7.0 release on 15 Mar, trunk
	  now has 1.7.1 in development.
	- Fix #3727: Protocol name is TLS, options have been renamed but
	  documentation is not consistent.
	- Check IXFR start serial.

9 March 2018: Wouter
	- Fix #3598: Fix swig build issue on rhel6 based system.
	  configure --disable-swig-version-check stops the swig version check.

8 March 2018: Wouter
	- tag 1.7.0rc2.

7 March 2018: Wouter
	- Fixed contrib/fastrpz.patch, even though this already applied
	  cleanly for me, now also for others.
	- patch to log creates keytag queries, from A. Schulze.
	- patch suggested by Debian lintian: allow to -> allow one to, from 
	  A. Schulze.
	- Attempt to remove warning about trailing whitespace.

6 March 2018: Wouter
	- Reverted fix for #3512, this may not be the best way forward;
	  although it could be changed at a later time, to stay similar to
	  other implementations.
	- svn trunk contains 1.7.0, this is the number for the next release.
	- Fix for windows compile.
	- tag 1.7.0rc1.

5 March 2018: Wouter