@@ -1,5 +1,9 @@
+16 March 2018: Wouter
+	- corrected a minor typo in the changelog.
+	- move htobe64/be64toh portability code to cachedb.c.
+
 15 March 2018: Wouter
-	- Add --with-libhiredis, unbound support for a new cached backend
+	- Add --with-libhiredis, unbound support for a new cachedb backend
 	  that uses a Redis server as the storage.  This implementation
 	  depends on the hiredis client library (https://redislabs.com/lp/hiredis/).
 	  And unbound should be built with both --enable-cachedb and
